--- a/index.html
+++ b/index.html
@@ -9,14 +9,37 @@
         color: red;
       }
 
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
+
+      h1 {
+        font-size: 7vw;
+        margin-top: 0;
+      }
+
+      h2 {
+        font-size: 30px;
+      }
+
+      /* HERO STYLES */
+
+      .full-hero {
+        background-color: #c7dbfc;
+        height: 50vh;
+      }
+
       /* SOCIAL STYLES */
       .social-link {
+        background: rgba(150, 150, 150, 0.5);
         color: blue;
       }
 
       /* BIO STYLES */
       .bio-box {
         border: 1px solid black;
+        width: 200px;
       }
       .bio-copy a {
         color: green;
@@ -24,6 +47,7 @@
     </style>
   </head>
   <body>
+    <div class="full-hero hero-home">
     <h1>I'm an h1</h1>
     <ul>
       <li>
@@ -36,6 +60,7 @@
         <a href="https://example.com/">Link</a>
       </li>
     </ul>
+    </div>
     <h2>I'm an h2</h2>
     <div class="bio-box">
       <h3>Michael Hartl</h3>
